--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="askbutton">ASK</string>
+    <string name="title">Make Your Decision</string>
+    <string name="title1">Here</string>
+    <string name="desc">Ball</string>
 </resources>
